🚀 Performance optimization: Fix forced reflows, JS minification, and syntax errors

--- a/firebase.json
+++ b/firebase.json
@@ -17,7 +17,7 @@
         ]
       },
       {
-        "source": "**/*.@(png|jpg|jpeg|gif|webp|svg|ico|woff|woff2)",
+        "source": "**/*.@(png|jpg|jpeg|gif|webp|avif|svg|ico|woff|woff2)",
         "headers": [
           {
             "key": "Cache-Control",
