--- a/firebase.json
+++ b/firebase.json
@@ -9,36 +9,24 @@
       {
         "source": "**/*.@(js|css)",
         "headers": [
-          {
-            "key": "Cache-Control",
-            "value": "public,max-age=31536000,immutable"
-          },
+          { "key": "Cache-Control", "value": "public,max-age=31536000,immutable" },
           { "key": "X-Content-Type-Options", "value": "nosniff" }
         ]
       },
       {
         "source": "**/*.@(png|jpg|jpeg|gif|webp|avif|svg|ico|woff|woff2)",
         "headers": [
-          {
-            "key": "Cache-Control",
-            "value": "public,max-age=31536000,immutable"
-          },
+          { "key": "Cache-Control", "value": "public,max-age=31536000,immutable" },
           { "key": "X-Content-Type-Options", "value": "nosniff" }
         ]
       },
       {
         "source": "/index.html",
         "headers": [
-          {
-            "key": "Cache-Control",
-            "value": "public,max-age=300,must-revalidate"
-          },
+          { "key": "Cache-Control", "value": "public,max-age=300,must-revalidate" },
           { "key": "X-Content-Type-Options", "value": "nosniff" },
           { "key": "X-Frame-Options", "value": "DENY" },
-          {
-            "key": "Referrer-Policy",
-            "value": "strict-origin-when-cross-origin"
-          }
+          { "key": "Referrer-Policy", "value": "strict-origin-when-cross-origin" }
         ]
       },
       {
@@ -49,6 +37,13 @@
         ]
       }
     ],
-    "rewrites": []
+    "rewrites": [
+      { "source": "/de", "destination": "/de/index.html" },
+      { "source": "/nl", "destination": "/nl/index.html" }
+    ],
+    "redirects": [
+      { "source": "/en", "destination": "/", "type": 301 },
+      { "source": "/en/**", "destination": "/", "type": 301 }
+    ]
   }
 }
