--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
   "scripts": {
     "build": "node scripts/build-head.js",
     "build:css": "npx clean-css-cli public/css/style.css -o public/css/style.min.css",
-    "build:js": "npm run build:js:app && npm run build:js:theme && npm run build:js:consent && npm run build:js:category && npm run build:js:svg",
+    "build:js": "npm run build:js:app && npm run build:js:theme && npm run build:js:consent && npm run build:js:category && npm run build:js:svg && npm run build:js:dropdown",
     "build:js:app": "npx terser public/js/app.js --compress --mangle --output public/js/app.min.js",
     "build:js:theme": "npx terser public/js/theme.js --compress --mangle --output public/js/theme.min.js",
     "build:js:consent": "npx terser public/js/consent.js --compress --mangle --output public/js/consent.min.js",
     "build:js:category": "npx terser public/js/category-enhancer.js --compress --mangle --output public/js/category-enhancer.min.js",
     "build:js:svg": "npx terser public/js/svg-icon-enhancer.js --compress --mangle --output public/js/svg-icon-enhancer.min.js",
+    "build:js:dropdown": "npx terser public/js/dropdown.js --compress --mangle --output public/js/dropdown.min.js",
     "build:min": "npm run build:css && npm run build:js",
     "watch": "nodemon --watch scripts --watch public scripts/build-head.js",
     "watch:css": "nodemon --watch public/css/style.css --exec \"npm run build:css\"",
@@ -32,6 +33,8 @@
     "html-validate": "^8.29.0",
     "nodemon": "^3.1.0",
     "prettier": "^3.6.2",
+    "stylelint": "^16.24.0",
+    "stylelint-config-standard": "^39.0.0",
     "svgo": "^4.0.0",
     "svgstore": "^3.0.1",
     "terser": "^5.44.0"
